<resources>
    <string name="app_name">GoNews</string>
    <string name="go_news">Go NEWS!</string>
    <string name="version_number">1.0.0</string>
    <string name="developer_name">Lionel Chueh</string>
    <string name="developer_email">lionelc15001@gmail.com</string>

    <string name="version">Version:</string>
    <string name="developer">Developer:</string>
    <string name="contact_me">Contact me:</string>
    <string name="search">Search</string>
    <string name="general">General</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="health">Health</string>
    <string name="science">Science</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>
    <string name="hour">h</string>
    <string name="minute">m</string>
    <string name="ago">ago</string>
    <string name="error_dialog_content">Please check your network connection and try to refresh page.</string>
    <string name="my_favorite_news">My Favorite News</string>
    <string name="share">Share</string>
    <string name="no_connection_error">No Connection Error</string>
    <string name="timeout_error">Timeout Error</string>
    <string name="server_error">Server Error</string>
    <string name="search_result_count">Search Result: ( %1$d )</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="relevancy">"Relevancy"</string>
    <string name="popularity">Popularity</string>
    <string name="publish_at">Publish At</string>
    <string name="favorite">Favorite</string>
    <string name="history">History</string>
    <string name="clear_history">Clear</string>
    <string name="clear_all">Clear All</string>
    <string name="about">About</string>
    <string name="added">Added!</string>
    <string name="tips">Tips</string>
    <string name="tip_dialog_clear_all_query_history">Are you sure to clear all query history?</string>
    <string name="tip_dialog_clear_all_page_history">Are you sure to clear all pages history?</string>

    <string-array name="topics">
        <item>@string/general</item>
        <item>@string/business</item>
        <item>@string/entertainment</item>
        <item>@string/health</item>
        <item>@string/science</item>
        <item>@string/sports</item>
        <item>@string/technology</item>
    </string-array>

</resources>
