<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/x12dp"
    android:paddingTop="@dimen/x20dp"
    android:paddingEnd="@dimen/x12dp"
    android:paddingBottom="@dimen/x20dp">

    <TextView
        android:id="@+id/txtTitle"
        style="@style/AboutTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/frame_gray_round_corner_white"
        android:text="@string/go_news"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_app_icon"
        app:layout_constraintBottom_toBottomOf="@+id/txtTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtTitle"
        app:layout_constraintTop_toTopOf="@+id/txtTitle" />

    <TextView
        android:id="@+id/txtVersion"
        style="@style/AboutTextBoldText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/x4dp"
        android:layout_marginTop="@dimen/x24dp"
        android:text="@string/version"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtVersionNumber"
        style="@style/AboutTextText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtContactEmail"
        app:layout_constraintTop_toTopOf="@+id/txtVersion" />

    <TextView
        android:id="@+id/txtDeveloper"
        style="@style/AboutTextBoldText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/x4dp"
        android:text="@string/developer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtVersion" />

    <TextView
        android:id="@+id/txtDeveloperName"
        style="@style/AboutTextText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developer_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtContactEmail"
        app:layout_constraintTop_toTopOf="@+id/txtDeveloper" />

    <TextView
        android:id="@+id/txtContactMe"
        style="@style/AboutTextBoldText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/x4dp"
        android:text="@string/contact_me"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDeveloper" />

    <TextView
        android:id="@+id/txtContactEmail"
        style="@style/AboutTextText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/x8dp"
        android:autoLink="email"
        android:text="@string/developer_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/txtContactMe"
        app:layout_constraintTop_toTopOf="@+id/txtContactMe" />

</android.support.constraint.ConstraintLayout>
