<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:padding="@dimen/x8dp">

    <RadioGroup
        android:id="@+id/radioGrp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radRelevancy"
            style="@style/PopupWindowText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorDeepGray"
            android:checked="true"
            android:text="@string/relevancy" />

        <RadioButton
            android:id="@+id/radPopularity"
            style="@style/PopupWindowText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorDeepGray"
            android:text="@string/popularity" />

        <RadioButton
            android:id="@+id/radPublishAt"
            style="@style/PopupWindowText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorDeepGray"
            android:text="@string/publish_at" />
    </RadioGroup>
</android.support.constraint.ConstraintLayout>